<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:visibility="visible"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/pergunta"
        android:layout_width="394dp"
        android:layout_height="140dp"
        android:layout_marginTop="-30dp"
        android:contentDescription="@string/pergunta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_humori"
        app:srcCompat="@drawable/ic_pergunta" />

    <ImageView
        android:id="@+id/logo_humori"
        android:layout_width="329dp"
        android:layout_height="105dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_humori" />

    <ImageView
        android:id="@+id/img_btn_feliz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:contentDescription="@string/btn_feliz"
        android:contextClickable="true"
        android:focusable="true"
        android:onClick="onFeliz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pergunta"
        app:srcCompat="@drawable/ic_emoji_feliz" />

    <ImageView
        android:id="@+id/img_btn_medio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:clickable="true"
        android:contentDescription="@string/medio"
        android:focusable="true"
        android:onClick="onTedio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_btn_feliz"
        app:srcCompat="@drawable/ic_emoji_medio" />

    <ImageView
        android:id="@+id/img_btn_triste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:clickable="true"
        android:contentDescription="@string/btn_triste"
        android:focusable="true"
        android:onClick="onTriste"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_btn_medio"
        app:srcCompat="@drawable/ic_emoji_triste" />

    <TextView
        android:id="@+id/txt_feliz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feliz"
        android:textColor="#090202"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_btn_feliz" />

    <TextView
        android:id="@+id/txt_medio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entediado"
        android:textColor="#090202"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_btn_medio" />

    <TextView
        android:id="@+id/txt_triste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/triste"
        android:textColor="#090202"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_btn_triste" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>