<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:visibility="visible"
    tools:context=".TristeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_txt_triste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/triste"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_txt_triste" />

        <ImageView
            android:id="@+id/img_txt_incentivo"
            android:layout_width="318dp"
            android:layout_height="136dp"
            android:layout_marginTop="-50dp"
            android:contentDescription="@string/incentivo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_txt_triste"
            app:srcCompat="@drawable/ic_txt_incentivo" />

        <TextView
            android:id="@+id/txt_incentivo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="-40dp"
            android:layout_marginEnd="10dp"
            android:gravity="end"
            android:textColor="@color/txtColor"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_txt_incentivo" />

        <ImageView
            android:id="@+id/img_txt_respirar"
            android:layout_width="353dp"
            android:layout_height="138dp"
            android:contentDescription="@string/respiracao"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_incentivo"
            app:srcCompat="@drawable/ic_txt_respirar" />

        <TextView
            android:id="@+id/txt_tecnica"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="-30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:text="@string/tecnica"
            android:textColor="@color/txtColor"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_txt_respirar" />

        <TextView
            android:id="@+id/txt_instrucao1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/instrucao1"
            android:textColor="@color/txtColor"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_tecnica" />

        <TextView
            android:id="@+id/txt_instrucao2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:text="@string/instrucao2"
            android:textColor="@color/txtColor"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_instrucao1" />

        <TextView
            android:id="@+id/txt_instrucao3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:text="@string/instrucao3"
            android:textColor="@color/txtColor"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_instrucao2" />

        <ImageView
            android:id="@+id/img_number_1"
            android:layout_width="107dp"
            android:layout_height="100dp"
            android:contentDescription="@string/number"
            app:layout_constraintEnd_toStartOf="@+id/img_number_2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_number_2"
            app:srcCompat="@drawable/ic_number_four" />

        <ImageView
            android:id="@+id/img_number_2"
            android:layout_width="96dp"
            android:layout_height="99dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/number"
            app:layout_constraintEnd_toStartOf="@+id/img_number_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img_number_1"
            app:layout_constraintTop_toBottomOf="@+id/txt_instrucao3"
            app:srcCompat="@drawable/ic_number_seven" />

        <ImageView
            android:id="@+id/img_number_3"
            android:layout_width="96dp"
            android:layout_height="99dp"
            android:contentDescription="@string/number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img_number_2"
            app:layout_constraintTop_toTopOf="@+id/img_number_2"
            app:srcCompat="@drawable/ic_number_eight" />

        <ImageView
            android:id="@+id/img_btn_iniciar"
            android:layout_width="318dp"
            android:layout_height="88dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:clickable="true"
            android:contentDescription="@string/iniciar"
            android:focusable="true"
            android:onClick="iniciar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_number_2"
            app:srcCompat="@drawable/ic_txt_iniciar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>